# task-management

./: README.md
backend/: pyproject.toml
backend/app/: database.py  main.py  models.py  repositories.py
backend/tests/: test_tasks.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/api/: tasks.ts
frontend/src/assets/: main.css
frontend/src/components/: AddTask.vue  TaskList.vue
frontend/src/components/__tests__/: AddTask.spec.ts  TaskList.spec.ts
frontend/src/types/: task.ts
