[tool.poetry]
name = "task-management-api"
version = "0.1.0"
description = "Task Management API with FastAPI"
authors = ["Raymond Lam"]
readme = "README.md"
packages = [{include = "task_management_api"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
